--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item android:id="@+id/action_settings"
         android:title="@string/settings"
+        app:showAsAction="never"
+        android:orderInCategory="100"
+        />
+
+    <item android:id="@+id/menu_reload"
+        android:title="@string/reload_title"
         app:showAsAction="never"
         android:orderInCategory="100"
         />
