--- a/app/src/main/res/values/bools.xml
+++ b/app/src/main/res/values/bools.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="settings_images_displayed_default">true</bool>
+    <bool name="settings_images_downloaded_background">true</bool>
 </resources>
